tests/fixtures/negative/50_malformed_intrinsic_failure.yc
intrinsic fn ()

fn main() i32 {
    return 0
}
